# aegis

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  CONVENTION.md  Cargo.toml  POST_V1.md  PRD.md  PROJECT_STATE.md  README.md  REVIEW.md  ROADMAP.md  RTK.md  SECURITY.md  TASKS.md  TODO.md  aegis-schema.json  deny.toml  justfile  skills-lock.json  test_q
.cargo/: config.toml
.claude/: AGENTS.md  (+1 more)
crates/aegis-audit/: Cargo.toml
crates/aegis-audit/src/: error.rs  lib.rs  logger.rs  secure_fs.rs
crates/aegis-audit/src/logger/: integrity.rs  query.rs  rotation.rs  writer.rs
crates/aegis-audit/src/logger/tests/: append_tests.rs  integrity_tests.rs  mod.rs  prune_tests.rs  query_tests.rs  rotation_tests.rs  serialization_tests.rs  watch_tests.rs
crates/aegis-audit/tests/: audit_v2.rs  public_api.rs
crates/aegis-config/: Cargo.toml
crates/aegis-config/src/: allowlist.rs  amend.rs  error.rs  lib.rs  model.rs  pattern_match.rs  snapshot.rs  validate.rs
crates/aegis-config/src/allowlist/: analysis.rs  compile.rs
crates/aegis-config/src/amend/: formatting.rs  validation.rs
crates/aegis-config/src/model/: enums.rs  migration.rs  partial.rs  ratchet.rs  rules.rs  serde_helpers.rs  template.rs
crates/aegis-config/src/model/tests/: deser.rs  language_analysis.rs  merge.rs  migration.rs  mod.rs  prune.rs  ratchet.rs  ratchet_helpers.rs
crates/aegis-config/src/validate/: tests.rs
crates/aegis-explanation/: Cargo.toml
crates/aegis-explanation/src/: lib.rs
crates/aegis-explanation/tests/: api.rs
crates/aegis-language/: Cargo.toml
crates/aegis-language/benches/: no_source_bench.rs  parse_latency_bench.rs
crates/aegis-language/queries/bash/: calls.scm
crates/aegis-language/queries/javascript/: calls.scm
crates/aegis-language/queries/python/: calls.scm
crates/aegis-language/queries/typescript/: calls.scm
crates/aegis-language/src/: language.rs  lib.rs  manifest.rs  operation.rs  operation_tests.rs  protocol.rs  protocol_tests.rs  router.rs  worker.rs
crates/aegis-language/src/languages/: bash.rs  bash_tests.rs  family.rs  javascript.rs  javascript_tests.rs  mod.rs  python.rs  typescript.rs  typescript_tests.rs
crates/aegis-language/tests/: bash_corpus.rs  grammar_smoke.rs  javascript_corpus.rs  no_source.rs  python_corpus.rs  typescript_corpus.rs
crates/aegis-language/tests/common/: corpus_harness.rs  no_source_corpus.rs
crates/aegis-language/tests/corpora/bash/: dynamic_operand.sh  exec_cross_language.sh  exec_shell.sh  fs_delete.sh  fs_overwrite.sh  malformed.sh  modern_syntax.sh  negatives.sh  perms.sh
crates/aegis-language/tests/corpora/javascript/: dynamic_operand.js  exec_js.js  exec_shell.js  fs_delete.js  fs_overwrite.js  malformed.js  modern_syntax.js  negatives.js  perms.js
crates/aegis-language/tests/corpora/python/: dynamic_operand.py  exec_python.py  exec_shell.py  fs_delete.py  fs_overwrite.py  malformed.py  modern_syntax.py  negatives.py  perms.py
crates/aegis-language/tests/corpora/typescript/: dynamic_operand.ts  exec_js.ts  exec_shell.ts  fs_delete.ts  fs_overwrite.ts  malformed.ts  modern_syntax.ts  negatives.ts  perms.ts
crates/aegis-parser/: Cargo.toml
crates/aegis-parser/src/: embedded_scripts.rs  lib.rs  nested_shells.rs  prefix_match.rs  segmentation.rs  tokenizer.rs
crates/aegis-parser/src/tests/: parsing_tests.rs  tokenizer_tests.rs
crates/aegis-policy/: Cargo.toml
crates/aegis-policy/src/: engine.rs  lib.rs  types.rs
crates/aegis-policy/src/engine/: tests.rs
crates/aegis-policy/src/engine/tests/: recovery_and_rules.rs
crates/aegis-sandbox/: Cargo.toml
crates/aegis-sandbox/profiles/: default.sbpl  network.sbpl
crates/aegis-sandbox/src/: lib.rs  linux.rs  macos.rs  support.rs  unsupported.rs  windows.rs
crates/aegis-scanner/: Cargo.toml  patterns.toml
crates/aegis-scanner/src/: error.rs  lib.rs  nested.rs  patterns.rs
crates/aegis-scanner/src/patterns/: builtins_a.rs  builtins_b.rs
crates/aegis-scanner/src/scanner/: assessment.rs  effect_opaque.rs  mod.rs  pipeline_semantics.rs  prefix_rule.rs  recursive.rs
crates/aegis-scanner/src/scanner/tests/: advanced.rs  basic.rs  compatibility.rs  edge_cases.rs  effect_opaque.rs  h3_followups.rs  h3_gaps.rs  match_evidence.rs  mod.rs
crates/aegis-snapshot/: Cargo.toml
crates/aegis-snapshot/src/: clock.rs  containment.rs  error.rs  git.rs  lib.rs  paths.rs  registry.rs  retention.rs  secure_fs.rs  sqlite.rs  testing.rs
crates/aegis-snapshot/src/docker/: mod.rs  tests.rs
crates/aegis-snapshot/src/mysql/: mod.rs  tests.rs
crates/aegis-snapshot/src/postgres/: mod.rs  tests.rs
crates/aegis-snapshot/src/supabase/: mod.rs  runtime.rs
crates/aegis-snapshot/tests/: crate_contract.rs
crates/aegis-starlark/: Cargo.toml
crates/aegis-starlark/src/: lib.rs
crates/aegis-starlark/tests/: load_policy.rs
crates/aegis-tui/: Cargo.toml
crates/aegis-tui/src/: block_screen.rs  confirm_screen.rs  lib.rs  recovery_screen.rs  shared.rs  stdout_renderer.rs  tty_renderer.rs
crates/aegis-tui/src/tests/: danger_tests.rs  decision_tests.rs  mod.rs  recovery_tests.rs  render_tests.rs  warn_tests.rs
crates/aegis-tui/tests/: api.rs
crates/aegis-types/: Cargo.toml
crates/aegis-types/src/: analysis.rs  assessment.rs  command.rs  decision.rs  lib.rs  pattern.rs  policy.rs  recovery.rs  risk.rs  sandbox.rs  snapshot.rs
crates/aegis-types/src/analysis/: classifier.rs  classifier_tests.rs  merge_tests.rs  tests.rs
fuzz/: Cargo.toml
fuzz/corpus/heredoc/: basic.txt  quoted-delimiter.txt  strip-tabs.txt  unterminated.txt
fuzz/corpus/parser/: inline-python.txt  nested-shell.txt  quotes.txt  unterminated-heredoc.txt
fuzz/corpus/router/: cd-prefix-and-pipeline.txt  heredoc-marker-glued-to-chain.txt  heredoc-tee-then-exec.txt  heredoc-write-then-exec.txt  script-file-argument.txt
fuzz/corpus/scanner/: heredoc-danger.txt  inline-encoding.txt  nested-shell.txt  quoted-escape.txt  subshell-grouping.txt
fuzz/fuzz_targets/: heredoc.rs  language_protocol.rs  parser.rs  router.rs  scanner.rs
(+432 files in other folders)
