[package]
name = "aegis"
version = "0.5.3"
edition = "2024"
license = "MIT"
description = "Terminal proxy that intercepts AI agent shell commands and requires human confirmation before destructive operations"
repository = "https://github.com/IliasAlmerekov/aegis"
homepage = "https://github.com/IliasAlmerekov/aegis"
keywords = ["security", "ai", "shell", "cli", "safety"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = [
    ".claude/**",
    ".codex/**",
    ".planning/**",
    "*.txt",
]

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
thiserror = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
async-trait = "0.1"
tokio = { version = "1", features = ["process", "fs", "rt", "rt-multi-thread", "io-util", "io-std", "sync"] }
crossterm = "0.28"
regex = "1.11"
aho-corasick = "1.1"
time = { version = "0.3", features = ["formatting", "parsing"] }
flate2 = "1"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
codegen-units = 1

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "scanner_bench"
harness = false
