[package]
name = "aegis"
version = "0.5.6"
edition = "2024"
rust-version = "1.89"
license = "MIT"
description = "Terminal proxy that intercepts AI agent shell commands and requires human confirmation before destructive operations"
repository = "https://github.com/IliasAlmerekov/aegis"
homepage = "https://github.com/IliasAlmerekov/aegis"
keywords = ["security", "ai", "shell", "cli", "safety"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = [
    ".claude/**",
    ".codex/**",
    ".planning/**",
    "*.txt",
]

[workspace]
members = [
    "crates/aegis-types",
    "crates/aegis-parser",
    "crates/aegis-scanner",
    "crates/aegis-policy",
    "crates/aegis-config",
    "crates/aegis-explanation",
    "crates/aegis-tui",
    "crates/aegis-audit",
    "crates/aegis-snapshot",
]
# The cargo-fuzz crate is built standalone by `cargo fuzz` with its own
# sanitizer flags; it must not be pulled into the main workspace.
exclude = ["fuzz"]

[dependencies]
aegis-types = { version = "0.5.6", path = "crates/aegis-types" }
aegis-parser = { version = "0.5.6", path = "crates/aegis-parser" }
aegis-scanner = { version = "0.5.6", path = "crates/aegis-scanner" }
aegis-policy = { version = "0.5.6", path = "crates/aegis-policy" }
aegis-config = { version = "0.5.6", path = "crates/aegis-config" }
aegis-explanation = { version = "0.5.6", path = "crates/aegis-explanation" }
aegis-tui = { version = "0.5.6", path = "crates/aegis-tui" }
aegis-audit = { version = "0.5.6", path = "crates/aegis-audit" }
aegis-snapshot = { version = "0.5.6", path = "crates/aegis-snapshot" }
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
thiserror = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
async-trait = "0.1"
tokio = { version = "1", features = ["process", "fs", "rt", "rt-multi-thread", "io-util", "io-std", "sync", "time"] }
regex = "1.11"
aho-corasick = "1.1"
time = { version = "0.3", features = ["formatting", "parsing"] }
flate2 = "1"
sha2 = "0.10"
schemars = "1"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
codegen-units = 1

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "scanner_bench"
harness = false
