[package]
name = "aegis-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.aegis-parser]
path = "../crates/aegis-parser"

[dependencies.aegis-scanner]
path = "../crates/aegis-scanner"

[dependencies.aegis-language]
path = "../crates/aegis-language"

[dependencies.aegis]
path = "../"

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
test = false
doc = false

[[bin]]
name = "scanner"
path = "fuzz_targets/scanner.rs"
test = false
doc = false
bench = false

[[bin]]
name = "heredoc"
path = "fuzz_targets/heredoc.rs"
test = false
doc = false
bench = false

[[bin]]
name = "language_protocol"
path = "fuzz_targets/language_protocol.rs"
test = false
doc = false
bench = false

[[bin]]
name = "router"
path = "fuzz_targets/router.rs"
test = false
doc = false
bench = false
