[package]
name = "aegis-explanation"
version = "0.5.7"
edition = "2024"
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/IliasAlmerekov/aegis"
homepage = "https://github.com/IliasAlmerekov/aegis"
documentation = "https://docs.rs/aegis-explanation"
description = "Structured explanation types for Aegis decisions. Depends on aegis-types, aegis-policy, and aegis-config."

[dependencies]
aegis-types = { version = "0.5.7", path = "../aegis-types" }
aegis-policy = { version = "0.5.7", path = "../aegis-policy" }
aegis-config = { version = "0.5.7", path = "../aegis-config" }
serde = { version = "1", features = ["derive"] }
