[package]
name = "aegis-parser"
version = "0.6.1"
edition = "2024"
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/IliasAlmerekov/aegis-shellguard"
homepage = "https://github.com/IliasAlmerekov/aegis-shellguard"
documentation = "https://docs.rs/aegis-parser"
description = "Shell command tokenizer and PrefixPattern matching for Aegis. Depends only on aegis-types."

[dependencies]
aegis-types = { version = "0.6.1", path = "../aegis-types" }
