[package]
name = "aegis-policy"
version = "0.5.3"
edition = "2024"
rust-version = "1.89"
license = "MIT"
description = "Pure policy evaluation for Aegis: maps a scanner Assessment plus mode/CI/allowlist context to a decision. Depends on aegis-types and aegis-scanner."

[dependencies]
aegis-types = { version = "0.5.3", path = "../aegis-types" }
aegis-scanner = { version = "0.5.3", path = "../aegis-scanner" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
aegis-parser = { version = "0.5.3", path = "../aegis-parser" }
