[package]
name = "aegis-policy"
version = "0.5.7"
edition = "2024"
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/IliasAlmerekov/aegis"
homepage = "https://github.com/IliasAlmerekov/aegis"
documentation = "https://docs.rs/aegis-policy"
description = "Pure policy evaluation for Aegis: maps a scanner Assessment plus mode/CI/allowlist context to a decision. Depends on aegis-types and aegis-scanner."

[dependencies]
aegis-types = { version = "0.5.7", path = "../aegis-types" }
aegis-scanner = { version = "0.5.7", path = "../aegis-scanner" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
aegis-parser = { version = "0.5.7", path = "../aegis-parser" }
