[package]
name = "aegis-sandbox"
version = "0.5.6"
edition = "2024"
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/IliasAlmerekov/aegis"
homepage = "https://github.com/IliasAlmerekov/aegis"
documentation = "https://docs.rs/aegis-sandbox"
description = "Linux sandboxing layer for Aegis — bwrap + Landlock execution wrapper."

[dependencies]
thiserror = "1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
