[package]
name = "aegis-sandbox"
version = "0.5.9"
edition = "2024"
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/IliasAlmerekov/aegis"
homepage = "https://github.com/IliasAlmerekov/aegis"
documentation = "https://docs.rs/aegis-sandbox"
description = "Sandboxing layer for Aegis — bwrap+Landlock (Linux), Seatbelt (macOS); native Windows unsupported."

[dependencies]
thiserror = "1"
tracing = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
