[package]
name = "aegis-tui"
version = "0.6.1"
edition = "2024"
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/IliasAlmerekov/aegis"
homepage = "https://github.com/IliasAlmerekov/aegis"
documentation = "https://docs.rs/aegis-tui"
description = "Crossterm confirmation TUI for Aegis. Depends on aegis-types, aegis-explanation, and crossterm."

[dependencies]
aegis-types = { version = "0.6.1", path = "../aegis-types" }
aegis-explanation = { version = "0.6.1", path = "../aegis-explanation" }
crossterm = "0.28"

[dev-dependencies]
aegis-parser = { version = "0.6.1", path = "../aegis-parser" }
aegis-config = { version = "0.6.1", path = "../aegis-config" }
regex = "1.11"
