[package]
name = "aegis-types"
version = "0.5.8"
edition = "2024"
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/IliasAlmerekov/aegis"
homepage = "https://github.com/IliasAlmerekov/aegis"
documentation = "https://docs.rs/aegis-types"
description = "Core data types for Aegis: RiskLevel, Decision, Pattern, and the shared pattern vocabulary. Zero dependencies beyond serde/schemars."

[dependencies]
serde = { version = "1", features = ["derive"] }
schemars = "1"

[dev-dependencies]
serde_json = "1"
